# paroni

./: LICENSE  paroni.cabal  stack.yaml
src/: Main.hs
