name:                paroni
version:             0.1.0.0
synopsis:            IRC Bot
description:         Please see README.md
homepage:            https://github.com/githubuser/paroni#readme
license:             LGPL21
license-file:        LICENSE
author:              Sampo Lamminsalo
maintainer:          sampo.lamminsalo@protonmail.com
copyright:           2019 Sampo Lamminsalo
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable paroni
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network == 2.8.0.1
                     , mtl == 2.2.2
                     , bytestring == 0.10.8.2
                     , utf8-string == 1.0.1.1
                     , megaparsec == 8.0.0
